@@ -2,8 +2,9 @@ freebsd-buildutils (9.0-3) UNRELEASED; urgency=low
 
   * Replace 10_non_kfreebsd.diff with equivalent patch from upstream
     HEAD.
+  * Add __BEGIN_DECLS / __END_DECLS in local unistd.h.
 
- -- Robert Millan <rmh@debian.org>  Sat, 21 Jan 2012 11:20:12 +0100
+ -- Robert Millan <rmh@debian.org>  Sat, 28 Jan 2012 19:23:40 +0100
 
 freebsd-buildutils (9.0-2) unstable; urgency=low
 
